--- a/app/src/main/res/layout/post_room_step1.xml
+++ b/app/src/main/res/layout/post_room_step1.xml
@@ -33,6 +33,7 @@
                     android:layout_height="wrap_content"
                     android:id="@+id/txt_choose_location"
                     android:text="Chọn địa chỉ của bạn"
+                    android:textSize="20dp"
                     android:textColor="#F54500"
                     android:layout_marginLeft="10dp"
                     android:layout_gravity="center_vertical"
@@ -44,8 +45,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
                 android:text="Thành phố"
+                android:textSize="20dp"
                 android:textColor="#666666"
-                android:textSize="14sp"
                 android:textStyle="bold"/>
 
             <RelativeLayout
@@ -76,7 +77,7 @@
                 android:layout_marginTop="20dp"
                 android:text="Quận"
                 android:textColor="#666666"
-                android:textSize="14sp"
+                android:textSize="20dp"
                 android:textStyle="bold"/>
 
             <RelativeLayout
@@ -107,7 +108,7 @@
                 android:layout_marginTop="20dp"
                 android:text="Phường"
                 android:textColor="#666666"
-                android:textSize="14sp"
+                android:textSize="20dp"
                 android:textStyle="bold"/>
 
             <RelativeLayout
@@ -138,7 +139,7 @@
                 android:text="Đường"
                 android:layout_marginTop="20dp"
                 android:textColor="#666666"
-                android:textSize="14sp"
+                android:textSize="20dp"
                 android:textStyle="bold"/>
 
             <RelativeLayout
@@ -154,7 +155,7 @@
                     android:background="@drawable/custom_spinner_rim"
                     android:gravity="center"
                     android:hint="Ví dụ: Trần Phú"
-                    android:textSize="14sp"
+                    android:textSize="18dp"
                     android:textColor="#666666"/>
             </RelativeLayout>
 
@@ -163,6 +164,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
                 android:text="Số nhà"
+                android:textSize="20dp"
                 android:textColor="#666666"
                 android:textStyle="bold"/>
 
@@ -179,18 +181,19 @@
                     android:gravity="center"
                     android:hint="Ví dụ: 96A"
                     android:textColor="#666666"
-                    android:textSize="14sp"/>
+                    android:textSize="18dp"/>
             </RelativeLayout>
 
             <Button
                 android:id="@+id/btn_nextStep1_post_room"
                 android:layout_width="match_parent"
-                android:height="30dp"
+                android:height="40dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginTop="25dp"
                 android:background="@drawable/custom_button_login"
                 android:text="Xác nhận"
+                android:textSize="20dp"
                 android:textAllCaps="false"
                 android:textColor="#FFFFFF" />
 
