--- a/app/src/main/res/layout/room_user_list_view.xml
+++ b/app/src/main/res/layout/room_user_list_view.xml
@@ -13,15 +13,17 @@
         android:layout_height="130dp"
         android:orientation="horizontal"
         android:padding="5dp">
+
         <RelativeLayout
             android:layout_width="150dp"
             android:layout_height="match_parent"
             android:orientation="vertical">
+
             <ImageView
                 android:id="@+id/img_room"
                 android:layout_width="150dp"
                 android:layout_height="130dp"
-                android:src="@drawable/ic_png_room_color_100"/>
+                android:src="@drawable/ic_room" />
         </RelativeLayout>
 
         <LinearLayout
@@ -40,8 +42,9 @@
                 android:maxLines="2"
                 android:text="Cho thuê phòng trọ giá rẻ"
                 android:textColor="#666666"
-                android:textSize="16sp"
+                android:textSize="20dp"
                 android:textStyle="bold" />
+
             <TextView
                 android:id="@+id/txt_address"
                 android:layout_width="match_parent"
@@ -52,10 +55,12 @@
                 android:maxLines="2"
                 android:text="96A, Mộ Lao, Hà Đông, Hà Nội"
                 android:textColor="#666666"
-                android:textSize="12sp" />
+                android:textSize="18dp" />
+
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
+
                 <TextView
                     android:id="@+id/txt_timeCreated"
                     android:layout_width="match_parent"
@@ -64,9 +69,9 @@
                     android:ellipsize="end"
                     android:lineSpacingExtra="5dp"
                     android:maxLines="2"
-                    android:text="10/22/2018"
+                    android:text="10/10/2023"
                     android:textColor="#666666"
-                    android:textSize="12sp" />
+                    android:textSize="16dp" />
             </RelativeLayout>
 
             <LinearLayout
@@ -74,26 +79,26 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:orientation="horizontal">
-<!--                <Button-->
-<!--                    android:id="@+id/btn_update"-->
-<!--                    android:layout_width="60dp"-->
-<!--                    android:layout_height="30dp"-->
-<!--                    android:drawableLeft="@drawable/ic_svg_setting_user_100"-->
-<!--                    android:background="@drawable/custom_button_delete"/>-->
-<!--                <Button-->
-<!--                    android:id="@+id/btn_delete"-->
-<!--                    android:layout_width="60dp"-->
-<!--                    android:layout_height="30dp"-->
-<!--                    android:layout_marginLeft="15dp"-->
-<!--                    android:drawableLeft="@drawable/ic_svg_delete_user_100"-->
-<!--                    android:background="@drawable/custom_button_delete"/>-->
-<!--                <Button-->
-<!--                    android:id="@+id/btn_change"-->
-<!--                    android:layout_width="60dp"-->
-<!--                    android:layout_height="30dp"-->
-<!--                    android:layout_marginLeft="15dp"-->
-<!--                    android:drawableLeft="@drawable/ic_svg_change_100"-->
-<!--                    android:background="@drawable/custom_button_delete"/>-->
+                <!--                <Button-->
+                <!--                    android:id="@+id/btn_update"-->
+                <!--                    android:layout_width="60dp"-->
+                <!--                    android:layout_height="30dp"-->
+                <!--                    android:drawableLeft="@drawable/ic_svg_setting_user_100"-->
+                <!--                    android:background="@drawable/custom_button_delete"/>-->
+                <!--                <Button-->
+                <!--                    android:id="@+id/btn_delete"-->
+                <!--                    android:layout_width="60dp"-->
+                <!--                    android:layout_height="30dp"-->
+                <!--                    android:layout_marginLeft="15dp"-->
+                <!--                    android:drawableLeft="@drawable/ic_svg_delete_user_100"-->
+                <!--                    android:background="@drawable/custom_button_delete"/>-->
+                <!--                <Button-->
+                <!--                    android:id="@+id/btn_change"-->
+                <!--                    android:layout_width="60dp"-->
+                <!--                    android:layout_height="30dp"-->
+                <!--                    android:layout_marginLeft="15dp"-->
+                <!--                    android:drawableLeft="@drawable/ic_svg_change_100"-->
+                <!--                    android:background="@drawable/custom_button_delete"/>-->
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
